Disable Ctrl+Shift+P on Chrome OS

Chrome OS uses ENABLE_BASIC_PRINTING but has no system dialog.  Disable
the shortcut as invoking printing in this state causes a crash.

BUG=652220
TEST=Verify printing still works.  Ctrl+Shift+P is a nop.

Review-Url: https://codereview.chromium.org/2376193006
Cr-Commit-Position: refs/heads/master@{#423047}

Former-commit-id: 03b6108c27abe7ebecec0179c34c05938ae3e905