printing/printing_context_chromeos.cc
@@ -165,8 +165,8 @@ void PrintingContextChromeos::AskUserForSettings(
     bool has_selection,
     bool is_scripted,
     const PrintSettingsCallback& callback) {
-  // We don't want to bring up a dialog here.  Ever.  Just signal the callback.
-  callback.Run(OK);
+  // We don't want to bring up a dialog here.  Ever.  This should not be called.
+  NOTREACHED();
 }
 
 PrintingContext::Result PrintingContextChromeos::UseDefaultSettings() {
